--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@toolpad/core": "^0.16.0",
+    "apexcharts": "^5.3.2",
     "axios": "^1.11.0",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "zustand": "^5.0.7"
   },
